--- a/microservice-prodCat/pom.xml
+++ b/microservice-prodCat/pom.xml
@@ -43,6 +43,14 @@
 			<version>2.2.3.RELEASE</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+		<dependency>
+          	<groupId>org.springframework.cloud</groupId>
+          	<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
