--- a/microservice-prodCat/src/main/resources/bootstrap.properties
+++ b/microservice-prodCat/src/main/resources/bootstrap.properties
@@ -3,6 +3,10 @@
 spring.application.name=microservice-prodCat
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+#eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 
-#spring.cloud.config.uri=http://localhost:8888
+# pour verifier le depot distant en cas de modification lancer localhost:8888/microservice-prodCat/default
+spring.cloud.config.uri=http://localhost:8888
+
+# pour actualiser le depot distant en cas de modification lancer http://localhost:8082/actuator/refresh
+management.endpoints.web.exposure.include=*
